--- a/pages/global.less
+++ b/pages/global.less
@@ -3,9 +3,12 @@
     height: 100%;
   }
   .ant-layout {
-    height: 100%;
+    min-height: 100%;
     .ant-layout-header {
       padding: 0;
+    }
+    .ant-layout-content {
+      background: #fff;
     }
   }
 }
